--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.38.0
-nltk==3.8.1
-scikit-learn==1.5.1  
-pandas==2.2.2
-numpy==2.1.1
-sentence-transformers==3.1.1
-plotly==5.24.0
+streamlit
+nltk
+scikit-learn
+pandas
+numpy
+plotly
+pdfplumber
+sentence-transformers
